add sqli and open redirect vulnerabilities
